1. Added new scripts. 2. Create a PuroTouchDB_Prod to the purofusion test gui.

--- a/PuroFusionTestGui/PuroFusionMainGui.xaml
+++ b/PuroFusionTestGui/PuroFusionMainGui.xaml
@@ -606,6 +606,7 @@
                                 <Label Content="Database:"/>
                                 <ComboBox Height="23" Name="comboBoxMaindatabase" Width="Auto" SelectedIndex="0"  >
                                     <ComboBoxItem>PuroTouchDB</ComboBoxItem>
+                                    <ComboBoxItem>PuroTouchDB_Prod</ComboBoxItem>
                                 </ComboBox>
                                 <Label Content="database:"/>
                                 <ComboBox Height="23" Name="comboBoxTouchDB" Width="Auto" IsEnabled="False" >
