Migration for PuroTouchDBv3 testing.

--- a/PuroFusionTestGui/PuroFusionMainGui.xaml
+++ b/PuroFusionTestGui/PuroFusionMainGui.xaml
@@ -608,6 +608,7 @@
                                 <ComboBox Height="23" Name="comboBoxMaindatabase" Width="Auto" SelectedIndex="0"  >
                                     <ComboBoxItem>PuroTouchDB</ComboBoxItem>
                                     <ComboBoxItem>PuroTouchDB_Prod</ComboBoxItem>
+                                    <ComboBoxItem>PuroTouchDBv3</ComboBoxItem>
                                 </ComboBox>
                                 <Label Content="database:"/>
                                 <ComboBox Height="23" Name="comboBoxTouchDB" Width="Auto" IsEnabled="False" >
